public/css/park.me.css
body 
{	
    padding-top: 70px;
}
@media (max-width: 768px) {
    body {
        padding-top: 210px;
    }
}

#splash
{
	width: 100%;
	height: 100%;
	display: inline-block;
	margin-left: auto;
	margin-right: auto;
	background-image: url("../images/logo_high_res.png");
	background-size: 50%;
    background-repeat: no-repeat;
    background-position: top center;
	opacity: 0.5;
}

.width-50 {

	width: 44%;
}

.width-90 {

	width: 90%;
}

#postbox{
	
    visibility: hidden;
    position: absolute;
    z-index: 100;
    width: 40%;
    height: 80%;
}

.dimmer{
    background: #000;
    position: absolute;
    opacity: .5;
    top: 0;
    z-index:99;
}

.logo{
    
	height: 125%;
}

div.parking-spots
{
	 margin: 15px;
	 padding: 10px; 
	 border: 1px solid #000000;
}

